T284875: Fix navigation buttons covered by long words in publish step

--- a/stylesheets/ext.publish.css
+++ b/stylesheets/ext.publish.css
@@ -26,8 +26,7 @@
 }
 
 .mwe-rw-item {
-	overflow-wrap: break-word;
-	word-wrap: break-word;
+	word-break: break-all;
 }
 
 #mwe-rwp-list .oo-ui-checkboxInputWidget {
